--- a/css/indexNormal.css
+++ b/css/indexNormal.css
@@ -52,10 +52,11 @@ body{
 
 .content{
     display: flex;
-    justify-content: space-around;
+    justify-content:space-around;
+    flex-wrap: wrap;
     align-items: center;
     width: 100%;
-    height: 560px;
+    height: 100%;
     margin: 65px auto;
 
 }
@@ -66,7 +67,7 @@ body{
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 15px -5px #000000;
-
+    margin: 10px 0;
 }
 
 .article-block-top{
