--- a/css/indexNormal.css
+++ b/css/indexNormal.css
@@ -86,6 +86,16 @@ body{
     height: 22px;
     padding: 16px 0;
 }
+.inform{
+    background-color: #26408F;
+    color: white !important;
+}
+.inform .article-news a{
+    color: white;
+}
+.inform .article-block-footer a{
+    color: #fff;
+}
 
 .article-block-content{
 
@@ -115,7 +125,7 @@ body{
     vertical-align: bottom;
 
 
-    font-size: 14px;
+    font-size: 16px;
     font-style: normal;
     font-weight: normal;
     line-height: 20px;
