--- a/css/indexNormal.css
+++ b/css/indexNormal.css
@@ -158,3 +158,9 @@ a:hover{
     font-weight: normal;
     cursor: auto;
 }
+
+.footer{
+    width: 100%;
+    height: 150px;
+    background-color: #26408F;
+}
