--- a/css/indexNormal.css
+++ b/css/indexNormal.css
@@ -13,6 +13,13 @@ body{
     font-family: -apple-system,BlinkMacSystemFont,Helvetica Neue,PingFang SC,Microsoft YaHei,Source Han Sans SC,Noto Sans CJK SC,WenQuanYi Micro Hei,sans-serif;
 
 }
+.header-wrap{
+    margin-top: 20px;
+    width: 100%;
+     display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .header a{
     text-decoration:none;
     color:rgb(222, 232, 247);
@@ -29,11 +36,11 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #001e3c;
-    width: 100%;
+    background-color: #1790ed;
+    width: 97%;
     height: 123px;
-
-    /*box-shadow: 0 3px 3px black;*/
+    border-radius: 5px;
+    box-shadow: 0 0 18px -5px #000000;
 }
 .header-introduce{
     display: flex;
@@ -42,10 +49,13 @@ body{
     width: 1225px;
 }
 .header-introduce p{
-    font-size: 36px;
-    font-weight: 600;
+    /*display: block;*/
+    /*margin-left: -90%;*/
+    font-size: 44px;
+    font-weight: bolder;
     line-height: 25px;
-    color:rgb(222, 232, 247);
+    color:#fff;
+    font-family:Linux Libertine,Georgia,Times;
 }
 
 
@@ -87,14 +97,14 @@ body{
     padding: 16px 0;
 }
 .inform{
-    background-color: #26408F;
-    color: white !important;
+    background-color: #fff;
+    color: #000 !important;
 }
 .inform .article-news a{
-    color: white;
+    color: #000;
 }
 .inform .article-block-footer a{
-    color: #fff;
+    color: #000;
 }
 
 .article-block-content{
@@ -160,7 +170,18 @@ a:hover{
 }
 
 .footer{
+    display:flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 150px;
-    background-color: #26408F;
+    height: 120px;
+    background-color: #1790ed;
+}
+.footer p:nth-child(1){
+    font:normal 20px/30px "微软雅黑";
+    color: #fff;
+}
+.footer p:nth-child(2){
+    font:normal bolder 16px/30px "微软雅黑";
+    color: #ccc;
 }
